# drill

contrib/: pom.xml
contrib/native/client/: CMakeLists.txt  build_darwin.sh  readme.linux  readme.win.txt  sync_client.cpp
contrib/native/client/example/: TestSQLClient.cc  async-client.cc  client.cc  querySubmitter.cpp  sqlClient.cpp  sync-client.cc  sync_client.cpp
contrib/native/client/information-schema/: Columns.json  Schemata.json  Tables.json
contrib/native/client/src/: RpcDecoder.h  RpcEncoder.h  RpcMessage.h  client.h  cluster-coordinator.h  cluster_coordinator.h  common.h  decimalUtils.cpp  decimalUtils.hpp  drill-client-async.cc  drill-client-async.h  drill-client-sync.cc  drill-client-sync.h  drill-client.cc  drill-client.h  recordBatch.cc  recordBatch.h  rpc-decoder.cc  rpc-decoder.h  rpc-encoder.cc  rpc-encoder.h  rpc-message.cc  rpc-message.h
contrib/native/client/src/clientlib/: CMakeLists.txt  drillClient.cpp  drillClient.hpp  drillClientImpl.cpp  drillClientImpl.hpp  errmsgs.cpp  errmsgs.hpp  recordBatch.cpp  rpcEncoder.cpp  rpcEncoder.hpp  utils.cpp  utils.hpp
contrib/native/client/src/clientlib/y2038/: CMakeLists.txt  time64_limits.h
contrib/native/client/src/include/drill/: common.hpp  drillClient.hpp  recordBatch.hpp
contrib/native/client/src/proto-cpp/: BitControl.pb.cc  BitControl.pb.h  BitData.pb.cc  BitData.pb.h  SchemaDef.pb.cc  SchemaDef.pb.h  Types.pb.cc  Types.pb.h  User.pb.cc  User.pb.h  UserBitShared.pb.cc  UserBitShared.pb.h
contrib/native/client/test/: run_query.sh
contrib/storage-postgres/: pom.xml
contrib/storage-postgres/src/main/java/org/apache/drill/exec/store/postgres/: DrillPostgresConstants.java  PostgresFilterBuilder.java  PostgresGroupScan.java  PostgresPushFilterIntoScan.java  PostgresRecordReader.java  PostgresScanBatchCreator.java  PostgresScanSpec.java  PostgresSchemaFactory.java  PostgresStoragePlugin.java  PostgresStoragePluginConfig.java  PostgresSubScan.java  PostgresUtils.java
contrib/storage-postgres/src/test/java/org/apache/drill/postgres/: BasePostgresTest.java  PostgresRecordReaderPostgresTest.java  PostgresTestsSuite.java  TestHBasePostgresFilterPushDown.java  TestHBasePostgresProjectPushDown.java  TestTableGenerator.java
